--- a/lab-python-lambda-map-reduce-filter.ipynb
+++ b/lab-python-lambda-map-reduce-filter.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "08463071-9351-4d49-8d29-4fcb817fb177",
    "metadata": {},
    "outputs": [],
@@ -94,12 +94,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0781335d-39cf-403d-b86a-ca908a09fe55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-1200, 'debit'),\n",
+       " (-100, 'debit'),\n",
+       " (-250, 'debit'),\n",
+       " (-300, 'debit'),\n",
+       " (-850, 'debit')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "#I'm gonna name it debit cause credit doesn't make sense here. Thanks!\n",
+    "\n",
+    "def debit_list():\n",
+    "    debit_list = list(filter(lambda x: x[1] == 'debit', transactions))\n",
+    "    return debit_list\n",
+    "\n",
+    "debit_list()"
    ]
   },
   {
@@ -124,12 +145,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25073469-7258-4fc6-b0a0-ef8ea57688fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-100, 'debit'),\n",
+       " (-250, 'debit'),\n",
+       " (-300, 'debit'),\n",
+       " (-850, 'debit'),\n",
+       " (-1200, 'debit')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "debit_list = debit_list()\n",
+    "\n",
+    "sort_descending = lambda x, y: x[0] > y[0]\n",
+    "debit_list = list(filter(lambda x: x[1] == 'debit', transactions))\n",
+    "debit_list = sorted(debit_list, key=lambda x: x[0], reverse=True)\n",
+    "\n",
+    "debit_list"
    ]
   },
   {
@@ -158,23 +200,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e1de9d03-f029-4e2e-9733-ae92e3de7527",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create list of bank account balances\n",
     "balances = [100, 50, -25, 1000, -10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2f253b7e-5300-4819-b38f-9fc090554f51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[105.0, 52.5, -26.25, 1050.0, -10.5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def balance_interest(balance, interest_rate):\n",
+    "    return balance * (1 + interest_rate)\n",
+    "\n",
+    "interest_rate = 0.05\n",
+    "\n",
+    "new_balances = list(map(lambda balance: balance_interest(balance, interest_rate), balances))\n",
+    "\n",
+    "new_balances\n"
    ]
   },
   {
@@ -195,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "69e24c3b-385e-44d6-a8ed-705a3f58e696",
    "metadata": {},
    "outputs": [],
@@ -209,12 +268,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0906a9b0-d567-4786-96f2-5755611b885e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'balance': 1020.0, 'interest_rate': 0.02},\n",
+       " {'balance': 2020.0, 'interest_rate': 0.01},\n",
+       " {'balance': 515.0, 'interest_rate': 0.03}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "def balance_interest2(account):\n",
+    "    balance = account['balance']\n",
+    "    interest_rate = account['interest_rate']\n",
+    "    new_balance = balance * (1 + interest_rate)\n",
+    "    return {'balance': new_balance, 'interest_rate': interest_rate}\n",
+    "\n",
+    "new_accounts = list(map(balance_interest2, accounts))\n",
+    "\n",
+    "new_accounts"
    ]
   },
   {
@@ -243,14 +323,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6284dbd3-e117-411e-8087-352be6deaed4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 50, -25, 1000, -10]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from functools import reduce\n",
     "\n",
-    "# your code goes here"
+    "balances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-35.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "negative_balances = filter(lambda balance: balance < 0, balances)\n",
+    "negative_balances = reduce(lambda x, y: x + y, negative_balances, 0.0)\n",
+    "\n",
+    "negative_balances"
    ]
   },
   {
@@ -273,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "da2264b5-298e-4b45-99df-852b94e90d15",
    "metadata": {},
    "outputs": [],
@@ -282,9 +396,35 @@
     "    {'balance': 1000, 'withdrawals': [100, 50, 200]},\n",
     "    {'balance': 2000, 'withdrawals': [300, 100]},\n",
     "    {'balance': 500, 'withdrawals': [50, 100, 75]},\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[650, 1600, 275]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_balance(account):\n",
+    "    balance = account['balance']\n",
+    "    withdrawals = account['withdrawals']\n",
+    "    balance = balance - sum(withdrawals)\n",
+    "    return balance\n",
     "\n",
-    "# your code goes here\n"
+    "remaining_balances = list(map(calculate_balance, accounts))\n",
+    "\n",
+    "remaining_balances"
    ]
   }
  ],
@@ -304,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
